# spell

./: .gitignore  .gitmodules  .secrets.baseline  AGENTS.md  Cargo.toml  LICENSE  README-before-fork.md  README.md  USAGE.md  install.sh  package.json  rust-toolchain.toml  tsconfig.base.json
!architecture/org-native/: capabilities.org  migration.org  query-language.org  vision.org
!tasks/: reference.org
!tasks/drafts/: DRAFT-001-add-org-protocol-for-plan-references.org  DRAFT-001-android-qml-remote-shell-app.org  DRAFT-001-enrich-outlineentry-with-end-line-column.org  DRAFT-001-extract-sessioneventmapper-class-and-add.org  DRAFT-001-fix-qml-chat-panel-blank-messages.org  DRAFT-001-silent-qml-events.org  (+28 more)
.husky/: pre-commit
apps/omp-remote/: CMakeLists.txt
apps/omp-remote/android/: AndroidManifest.xml
apps/omp-remote/android/res/values/: strings.xml
apps/omp-remote/qml/: ChatView.qml  Main.qml  MessageDelegate.qml  ToolCallCard.qml
apps/omp-remote/src/: remoteclient.cpp
apps/spell/: CMakeLists.txt
apps/spell/android/: AndroidManifest.xml
apps/spell/android/res/values/: strings.xml
apps/spell/qml/: Main.qml  PanelDrawer.qml
apps/spell/src/: main.cpp  panelmanager.cpp  panelmanager.h  remoteclient.h
docs/: config-usage.md  custom-tools.md  environment-variables.md  extension-loading.md  gemini-manifest-extensions.md  hooks.md  mcp-server-tool-authoring.md  models.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-build-release-debugging.md  notebook-tool-runtime.md  plugin-manager-installer-plumbing.md  porting-from-pi-mono.md  porting-to-natives.md  python-repl.md  rpc.md  rulebook-matching-pipeline.md  sdk.md  secrets.md  session-operations-export-share-fork-resume.md  session-switching-and-recent-listing.md  session.md  skills.md  slash-command-internals.md  task-agent-discovery.md  theme.md
scripts/: build-spell-apk.sh  dump-edit-history.ts  install.sh  omp-remote-adb.sh  repro-stuck.ts  spell-adb.sh
(+84 files in other folders)
